data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3468.wast
;; 7. **Interleaved Function Calls and Loop Breaks**:    - Implement function calls within loops that are interleaved with `br` instructions. Verify the code correctly exits the loop after function returns.    - Confirm that function references are accurate and stack handling is correct across breaks.

(assert_invalid
  (module
    (func $func1 (result i32)
      (i32.const 10)
    )
    (func $func2 (param i32)
      (loop $loop1
        (call $func1)
        (i32.const 0)
        (br_if $loop1)
        (i32.const 0)
        (call $func1)
      )
    )
  )
  "type mismatch"
)